tests/error/cant_find_in_nspc.gw
#! [contains] cannot find class
class C {
  class D {
    int i;
  }
}

class E extends C {
  C->D d;
}

class F {
  F->D d;
}

F f;
